Time: 26 ms (92.74%) | Memory: 51.6 MB (49.10%) - LeetSync