@@ -1,26 +1,23 @@
 class Solution {
     public List<List<Integer>> threeSum(int[] nums) {
+        int len = nums.length;
         Arrays.sort(nums);
         List<List<Integer>> answer = new ArrayList<>();
-        for(int i=0;i<nums.length;i++){
+        for(int i=0;i<len;i++){
             if(i>0 && nums[i]==nums[i-1]) continue;
-            if(nums[i]>0) break;
-            int fixed = nums[i];
+            int fixedNum = nums[i];
             int left = i+1;
-            int right = nums.length-1;
+            int right = len-1;
             while(left < right){
-                int curSum = nums[left] + nums[right] + fixed;
-                if(curSum == 0){
-                    // answer.add(new ArrayList<>(List.of(fixed, nums[left], nums[right])));
-                    answer.add(Arrays.asList(fixed, nums[left], nums[right]));
+                int sum = fixedNum + nums[left] + nums[right];
+                if(sum > 0) right--;
+                else if (sum < 0) left++;
+                else{
+                    answer.add(new ArrayList<>(List.of(fixedNum, nums[left], nums[right])));
                     left++;
                     right--;
                     while(left < right && nums[left] == nums[left-1]) left++;
                 }
-                else if(curSum > 0){
-                    right--;
-                }
-                else left++;
             }
         }
         return answer;
